force-app/main/default/objects/Opportunity/fields/Abgebender_Notar__c.field-meta.xml
<CustomField>
    <fullName>Abgebender_Notar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abgebender Notar</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Abgebender Notar)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>