force-app/main/default/objects/Opportunity/fields/AbgerechneterBetrag__c.field-meta.xml
<CustomField>
    <fullName>AbgerechneterBetrag__c</fullName>
    <formula>IF(
    IsWon,
				IF((ISPICKVAL(Immobilie__r.Kaufpreiszahlung__c, &apos;Endfällig&apos;) || ISPICKVAL(Immobilie__r.Kaufpreiszahlung__c, &apos;Externes Vertriebsprojekt (Endfällig)&apos;)) &amp;&amp; (Datum_Kaufpreisf_lligkeitsschreiben__c &lt;= TODAY() || Kaufpreis_bezahlt__c),  
				    beurkundeter_Kaufpreis__c,
							 AbgerechneterBetragMaBV__c 
				)
				, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abgerechneter Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>