force-app/main/default/objects/Opportunity/fields/AbgerechneterBetragMaBV__c.field-meta.xml
<CustomField>
    <fullName>AbgerechneterBetragMaBV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abgerechneter Betrag (MaBV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>