force-app/main/default/objects/Opportunity/fields/Abnahmeprotokoll__c.field-meta.xml
<CustomField>
    <fullName>Abnahmeprotokoll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abnahmeprotokoll</label>
    <type>Checkbox</type>
</CustomField>