force-app/main/default/objects/Opportunity/fields/Abrechnung_ber__c.field-meta.xml
<CustomField>
    <fullName>Abrechnung_ber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abrechnung über</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Abrechnung über)</relationshipLabel>
    <relationshipName>OpportunitiesNK3O</relationshipName>
    <type>Lookup</type>
</CustomField>