force-app/main/default/objects/Opportunity/fields/Abrechnung_ber_ID__c.field-meta.xml
<CustomField>
    <fullName>Abrechnung_ber_ID__c</fullName>
    <formula>Account.Abrechnung_ber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abrechnung über ID</label>
    <type>Text</type>
</CustomField>