force-app/main/default/objects/Opportunity/fields/AbrechnungUeberNurFuerGrundprovision__c.field-meta.xml
<CustomField>
    <fullName>AbrechnungUeberNurFuerGrundprovision__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn dieses Feld angehakt ist, wird nur die Grundprovision über das Feld &quot;Abrechnung über&quot; abgerechnet</inlineHelpText>
    <label>Abrechnung über nur für Grundprovision</label>
    <type>Checkbox</type>
</CustomField>