force-app/main/default/objects/Opportunity/fields/Abweichende_Grundprovision__c.field-meta.xml
<CustomField>
    <fullName>Abweichende_Grundprovision__c</fullName>
    <label>Abweichende Grundprovision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>