force-app/main/default/objects/Opportunity/fields/Abweichende_Verkaufsprovision__c.field-meta.xml
<CustomField>
    <fullName>Abweichende_Verkaufsprovision__c</fullName>
    <label>Beratungsprovision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>