force-app/main/default/objects/Opportunity/fields/AccountIdAbrechnungUeber__c.field-meta.xml
<CustomField>
    <fullName>AccountIdAbrechnungUeber__c</fullName>
    <formula>Abrechnung_ber__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId Abrechnung über</label>
    <type>Text</type>
</CustomField>