force-app/main/default/objects/Opportunity/fields/AccountIdImmobilienberater__c.field-meta.xml
<CustomField>
    <fullName>AccountIdImmobilienberater__c</fullName>
    <formula>CASESAFEID(Immobilienberater__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId Immobilienberater</label>
    <type>Text</type>
</CustomField>