force-app/main/default/objects/Opportunity/fields/AdditionalBrokerCommission__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBrokerCommission__c</fullName>
    <formula>Appartement__r.AdditionalBrokerCommission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Broker Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>