force-app/main/default/objects/Opportunity/fields/AdditionalCosts__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCosts__c</fullName>
    <description>Shows Additional Costs of Appartment.</description>
    <formula>Appartement__r.Additional_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>