force-app/main/default/objects/Opportunity/fields/Adresse_des_Maklers__c.field-meta.xml
<CustomField>
    <fullName>Adresse_des_Maklers__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse des Maklers</label>
    <type>Text</type>
</CustomField>