force-app/main/default/objects/Opportunity/fields/Alle_Unterlagen_vorhanden__c.field-meta.xml
<CustomField>
    <fullName>Alle_Unterlagen_vorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alle Unterlagen vorhanden</label>
    <type>Checkbox</type>
</CustomField>