force-app/main/default/objects/Opportunity/fields/Angebotsabgabe__c.field-meta.xml
<CustomField>
    <fullName>Angebotsabgabe__c</fullName>
    <label>Angebotsabgabe</label>
    <type>Date</type>
</CustomField>