force-app/main/default/objects/Opportunity/fields/AnnahmeBisSpaetestens__c.field-meta.xml
<CustomField>
    <fullName>AnnahmeBisSpaetestens__c</fullName>
    <label>Annahme bis spätestens</label>
    <type>Date</type>
</CustomField>