force-app/main/default/objects/Opportunity/fields/Ansprechpartner_del__c.field-meta.xml
<CustomField>
    <fullName>Ansprechpartner_del__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ansprechpartner</label>
    <type>Text</type>
</CustomField>