force-app/main/default/objects/Opportunity/fields/AnsprechpartnerCareConnect__c.field-meta.xml
<CustomField>
    <fullName>AnsprechpartnerCareConnect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ansprechpartner CareConnect</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Ansprechpartner CareConnect)</relationshipLabel>
    <relationshipName>OpportunitiesAnsprechpartnerCareConnect</relationshipName>
    <type>Lookup</type>
</CustomField>