force-app/main/default/objects/Opportunity/fields/AnzahlBestaetigteProvisionen__c.field-meta.xml
<CustomField>
    <fullName>AnzahlBestaetigteProvisionen__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Anzahl Bestätigte Provisionen</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>