force-app/main/default/objects/Opportunity/fields/AnzahlVKCZahlungen__c.field-meta.xml
<CustomField>
    <fullName>AnzahlVKCZahlungen__c</fullName>
    <label>Anzahl VKC-Zahlungen</label>
    <summaryForeignKey>VkcZahlung__c.Verkaufschance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>