force-app/main/default/objects/Opportunity/fields/Appartement__c.field-meta.xml
<CustomField>
    <fullName>Appartement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Apartment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Appartment__c.Property__c</field>
            <operation>equals</operation>
            <valueField>$Source.Immobilie__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Appartment__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>