force-app/main/default/objects/Opportunity/fields/Aufschiebende_Bedingung__c.field-meta.xml
<CustomField>
    <fullName>Aufschiebende_Bedingung__c</fullName>
    <inlineHelpText>- Keine = Keine aufschiebende Bedingung vorhanden
- Aufschiebende Bedingung vorhanden = Es existiert eine Bedingung, z. B. KfW‑Darlehenszusage fehlt noch
- Aufschiebende Bedingung erfüllt = Bedingung wurde erfüllt (z. B. Kaufpreisfälligkeit bestätigt)
- Aufschiebende Bedingung nicht erfüllt = Ablauf überschritten, keine Erfüllung → Vertrag kommt nicht zustande</inlineHelpText>
    <label>Aufschiebende Bedingung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>keine</fullName>
                <default>true</default>
                <label>keine</label>
            </value>
            <value>
                <fullName>vorhanden</fullName>
            </value>
            <value>
                <fullName>Bedingung erfüllt</fullName>
            </value>
            <value>
                <fullName>Bedingung nicht erfüllt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>