force-app/main/default/objects/Opportunity/fields/Aufschiebende_Bedingung_g_ltig_bis__c.field-meta.xml
<CustomField>
    <fullName>Aufschiebende_Bedingung_g_ltig_bis__c</fullName>
    <inlineHelpText>Ablaufdatum (lt. Vertrag) der Gültigkeit der aufschieb, Bedingung. Rechtzeitig vorher muss der Status geklärt sein.</inlineHelpText>
    <label>Aufschiebende Bedingung gültig bis</label>
    <type>Date</type>
</CustomField>