force-app/main/default/objects/Opportunity/fields/AufschiebendeBedingungErfuellt__c.field-meta.xml
<CustomField>
    <fullName>AufschiebendeBedingungErfuellt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Gibt an, dass die aufschiebende Bedingung erfüllt wurde. Erst dann können Provisionen und Gutschriften erzeugt werden.</inlineHelpText>
    <label>Aufschiebende Bedingung erfüllt</label>
    <type>Checkbox</type>
</CustomField>