force-app/main/default/objects/Opportunity/fields/AZBVorhanden__c.field-meta.xml
<CustomField>
    <fullName>AZBVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AZB vorhanden</label>
    <type>Checkbox</type>
</CustomField>