force-app/main/default/objects/Opportunity/fields/BankantragGestellt__c.field-meta.xml
<CustomField>
    <fullName>BankantragGestellt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankantrag gestellt</label>
    <type>Checkbox</type>
</CustomField>