force-app/main/default/objects/Opportunity/fields/Begleiter_Notar__c.field-meta.xml
<CustomField>
    <fullName>Begleiter_Notar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Begleiter Notar</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Begleiter Notar)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>