force-app/main/default/objects/Opportunity/fields/Belastung_pro_Monat__c.field-meta.xml
<CustomField>
    <fullName>Belastung_pro_Monat__c</fullName>
    <label>Belastung pro Monat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>