force-app/main/default/objects/Opportunity/fields/Bemerkung_intern__c.field-meta.xml
<CustomField>
    <fullName>Bemerkung_intern__c</fullName>
    <label>Bemerkung intern</label>
    <type>TextArea</type>
</CustomField>