force-app/main/default/objects/Opportunity/fields/Bemerkung_Provision__c.field-meta.xml
<CustomField>
    <fullName>Bemerkung_Provision__c</fullName>
    <label>Bemerkung Provision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>