force-app/main/default/objects/Opportunity/fields/Berater_text__c.field-meta.xml
<CustomField>
    <fullName>Berater_text__c</fullName>
    <label>Berater text</label>
    <length>150</length>
    <type>Text</type>
</CustomField>