force-app/main/default/objects/Opportunity/fields/Beratungsprotokoll__c.field-meta.xml
<CustomField>
    <fullName>Beratungsprotokoll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beratungsprotokoll</label>
    <type>Checkbox</type>
</CustomField>