force-app/main/default/objects/Opportunity/fields/BeratungsprovisionMitPVInEuro__c.field-meta.xml
<CustomField>
    <fullName>BeratungsprovisionMitPVInEuro__c</fullName>
    <formula>Provisionsbasis__c * BeratungsprovisionMitPVInProzent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beratungsprovision mit PV in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>