force-app/main/default/objects/Opportunity/fields/BeratungsprovisionMitPVInProzent__c.field-meta.xml
<CustomField>
    <fullName>BeratungsprovisionMitPVInProzent__c</fullName>
    <label>Beratungsprovision mit PV in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>