force-app/main/default/objects/Opportunity/fields/Beratungstermin__c.field-meta.xml
<CustomField>
    <fullName>Beratungstermin__c</fullName>
    <label>Beratungstermin</label>
    <type>Date</type>
</CustomField>