force-app/main/default/objects/Opportunity/fields/Besichtigungstermin__c.field-meta.xml
<CustomField>
    <fullName>Besichtigungstermin__c</fullName>
    <label>Besichtigungstermin</label>
    <type>Date</type>
</CustomField>