force-app/main/default/objects/Opportunity/fields/Beurkundbar_ab__c.field-meta.xml
<CustomField>
    <fullName>Beurkundbar_ab__c</fullName>
    <formula>Immobilie__r.Beurkundbar_ab__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beurkundbar ab</label>
    <type>Date</type>
</CustomField>