force-app/main/default/objects/Opportunity/fields/beurkundeter_Kaufpreis__c.field-meta.xml
<CustomField>
    <fullName>beurkundeter_Kaufpreis__c</fullName>
    <label>beurkundeter Kaufpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>