force-app/main/default/objects/Opportunity/fields/Beurkundung__c.field-meta.xml
<CustomField>
    <fullName>Beurkundung__c</fullName>
    <label>Beurkundung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-seitig</fullName>
            </value>
            <value>
                <fullName>Käuferangebot</fullName>
            </value>
            <value>
                <fullName>Verkäuferangebot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>