force-app/main/default/objects/Opportunity/fields/Beurkundung_m_aufschiebender_Bedingung__c.field-meta.xml
<CustomField>
    <fullName>Beurkundung_m_aufschiebender_Bedingung__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Wenn Notartermin einseitig und mit aufschiebender Bedingung, dann hier abhaken.</inlineHelpText>
    <label>Beurkundung m. aufschiebender Bedingung</label>
    <type>Checkbox</type>
</CustomField>