force-app/main/default/objects/Opportunity/fields/BewertungAmpelFinanzierungsanfrage__c.field-meta.xml
<CustomField>
    <fullName>BewertungAmpelFinanzierungsanfrage__c</fullName>
    <formula>IMAGE(
CASE(BewertungFinanzierungsanfrage__c,
&quot;Grün&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Gelb&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Rot&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Status Farbe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bewertung FA (Ampel)</label>
    <type>Text</type>
</CustomField>