force-app/main/default/objects/Opportunity/fields/Bezahlt__c.field-meta.xml
<CustomField>
    <fullName>Bezahlt__c</fullName>
    <label>Bezahlt</label>
    <summarizedField>VkcZahlung__c.Betrag__c</summarizedField>
    <summaryForeignKey>VkcZahlung__c.Verkaufschance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>