force-app/main/default/objects/Opportunity/fields/BezahlterBetrag__c.field-meta.xml
<CustomField>
    <fullName>BezahlterBetrag__c</fullName>
    <formula>IF(AbgerechneterBetrag__c != 0, AbgerechneterBetrag__c - OffenerBetrag__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bezahlter Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>