force-app/main/default/objects/Opportunity/fields/BrokerInformation__c.field-meta.xml
<CustomField>
    <fullName>BrokerInformation__c</fullName>
    <label>Makler Infos</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>