force-app/main/default/objects/Opportunity/fields/CarestoneFinancingRecommended__c.field-meta.xml
<CustomField>
    <fullName>CarestoneFinancingRecommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS Finanzierung empfohlen</label>
    <type>Checkbox</type>
</CustomField>