force-app/main/default/objects/Opportunity/fields/ClosingBonusInEuro__c.field-meta.xml
<CustomField>
    <fullName>ClosingBonusInEuro__c</fullName>
    <formula>ClosingBonusInProzent__c * Provisionsbasis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Provision in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>