force-app/main/default/objects/Opportunity/fields/CommentCarestoneFinancing__c.field-meta.xml
<CustomField>
    <fullName>CommentCarestoneFinancing__c</fullName>
    <label>Kommentar CS Finanzierung</label>
    <type>TextArea</type>
</CustomField>