force-app/main/default/objects/Opportunity/fields/CommentOPOS__c.field-meta.xml
<CustomField>
    <fullName>CommentOPOS__c</fullName>
    <label>Kommentar OPOS</label>
    <type>TextArea</type>
</CustomField>