force-app/main/default/objects/Opportunity/fields/ConsultationType__c.field-meta.xml
<CustomField>
    <fullName>ConsultationType__c</fullName>
    <label>Beratungsart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onlineberatung CS</fullName>
            </value>
            <value>
                <fullName>Vor Ort Beratung CS</fullName>
            </value>
            <value>
                <fullName>Makler ohne CS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>