force-app/main/default/objects/Opportunity/fields/CurrentStatusVkc__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatusVkc__c</fullName>
    <label>Current Status VKC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer still undecided</fullName>
            </value>
            <value>
                <fullName>Is at the broker/consultant</fullName>
            </value>
            <value>
                <fullName>Missing financing customer bank</fullName>
            </value>
            <value>
                <fullName>Missing financing Carestone</fullName>
            </value>
            <value>
                <fullName>KfW requirement not fulfilled Customer</fullName>
            </value>
            <value>
                <fullName>KfW requirement not fulfilled Carestone</fullName>
            </value>
            <value>
                <fullName>Customer has not yet received contract documents</fullName>
            </value>
            <value>
                <fullName>Notary mistake</fullName>
            </value>
            <value>
                <fullName>Notary appointment requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>