force-app/main/default/objects/Opportunity/fields/CustomerIncentiveWasPaid__c.field-meta.xml
<CustomField>
    <fullName>CustomerIncentiveWasPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentivierung Kunde gezahlt</label>
    <type>Checkbox</type>
</CustomField>