force-app/main/default/objects/Opportunity/fields/Datum_1_MaBV_Rate_gezahlt__c.field-meta.xml
<CustomField>
    <fullName>Datum_1_MaBV_Rate_gezahlt__c</fullName>
    <label>Datum 1. MaBV Rate gezahlt</label>
    <type>Date</type>
</CustomField>