force-app/main/default/objects/Opportunity/fields/Datum_Beratungsprotokoll__c.field-meta.xml
<CustomField>
    <fullName>Datum_Beratungsprotokoll__c</fullName>
    <label>Datum Beratungsprotokoll</label>
    <type>Date</type>
</CustomField>