force-app/main/default/objects/Opportunity/fields/Datum_Eingang_EK_Nachweis__c.field-meta.xml
<CustomField>
    <fullName>Datum_Eingang_EK_Nachweis__c</fullName>
    <label>Datum Eingang EK-Nachweis</label>
    <type>Date</type>
</CustomField>