force-app/main/default/objects/Opportunity/fields/Datum_Finanzierung_oder_Eigenkapitalnach__c.field-meta.xml
<CustomField>
    <fullName>Datum_Finanzierung_oder_Eigenkapitalnach__c</fullName>
    <label>Datum Finanzierung oder Eigenkapitalnach</label>
    <type>Date</type>
</CustomField>