force-app/main/default/objects/Opportunity/fields/Datum_Kaufpreis_bezahlt__c.field-meta.xml
<CustomField>
    <fullName>Datum_Kaufpreis_bezahlt__c</fullName>
    <label>Datum Kaufpreis bezahlt</label>
    <type>Date</type>
</CustomField>