force-app/main/default/objects/Opportunity/fields/Datum_Kaufpreisf_lligkeitsschreiben__c.field-meta.xml
<CustomField>
    <fullName>Datum_Kaufpreisf_lligkeitsschreiben__c</fullName>
    <label>Datum Kaufpreisfälligkeitsschreiben</label>
    <type>Date</type>
</CustomField>