force-app/main/default/objects/Opportunity/fields/Datum_KP_F_lligkeit_gem_KV__c.field-meta.xml
<CustomField>
    <fullName>Datum_KP_F_lligkeit_gem_KV__c</fullName>
    <label>Datum KP-Fälligkeit gem. KV</label>
    <type>Date</type>
</CustomField>