force-app/main/default/objects/Opportunity/fields/Datum_Risikobelehrung__c.field-meta.xml
<CustomField>
    <fullName>Datum_Risikobelehrung__c</fullName>
    <label>Datum Risikobelehrung</label>
    <type>Date</type>
</CustomField>