force-app/main/default/objects/Opportunity/fields/Datum_Status_Finanzierung__c.field-meta.xml
<CustomField>
    <fullName>Datum_Status_Finanzierung__c</fullName>
    <label>Datum Status Finanzierung</label>
    <type>Date</type>
</CustomField>