force-app/main/default/objects/Opportunity/fields/DatumAbnahmeprotokoll__c.field-meta.xml
<CustomField>
    <fullName>DatumAbnahmeprotokoll__c</fullName>
    <label>Datum Abnahmeprotokoll</label>
    <type>Date</type>
</CustomField>