force-app/main/default/objects/Opportunity/fields/DatumBedingungErfuellt__c.field-meta.xml
<CustomField>
    <fullName>DatumBedingungErfuellt__c</fullName>
    <inlineHelpText>Datum, an dem die aufschiebende Bedingung erfüllt wurde.</inlineHelpText>
    <label>Datum Bedingung erfüllt</label>
    <type>Date</type>
</CustomField>