force-app/main/default/objects/Opportunity/fields/DatumDarlehensvertragLiegtVor__c.field-meta.xml
<CustomField>
    <fullName>DatumDarlehensvertragLiegtVor__c</fullName>
    <label>Datum Darlehensvertrag liegt vor</label>
    <type>Date</type>
</CustomField>