force-app/main/default/objects/Opportunity/fields/DatumRueckabwicklung__c.field-meta.xml
<CustomField>
    <fullName>DatumRueckabwicklung__c</fullName>
    <label>Datum Rückabwicklung</label>
    <type>Date</type>
</CustomField>