force-app/main/default/objects/Opportunity/fields/DatumUrkundeMitFinanzierung__c.field-meta.xml
<CustomField>
    <fullName>DatumUrkundeMitFinanzierung__c</fullName>
    <label>Datum Urkunde mit Finanzierung</label>
    <type>Date</type>
</CustomField>