force-app/main/default/objects/Opportunity/fields/EmailFinanzierungsberater__c.field-meta.xml
<CustomField>
    <fullName>EmailFinanzierungsberater__c</fullName>
    <formula>Finanzierungsberater__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-Mail Finanzierungsberater</label>
    <type>Text</type>
</CustomField>