force-app/main/default/objects/Opportunity/fields/ErfolgsabhaengigeProvision__c.field-meta.xml
<CustomField>
    <fullName>ErfolgsabhaengigeProvision__c</fullName>
    <label>Erfolgsabhängige Provision</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>