force-app/main/default/objects/Opportunity/fields/ExterneProvisionenGeneriert__c.field-meta.xml
<CustomField>
    <fullName>ExterneProvisionenGeneriert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Externe Provisionen generiert</label>
    <type>Checkbox</type>
</CustomField>