force-app/main/default/objects/Opportunity/fields/FB_Entscheidung_moeglich__c.field-meta.xml
<CustomField>
    <fullName>FB_Entscheidung_moeglich__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Nur von Finanzierungsberatern zu befüllen!</inlineHelpText>
    <label>FB Entscheidung möglich</label>
    <type>Checkbox</type>
</CustomField>