force-app/main/default/objects/Opportunity/fields/FFireAbrechnung__c.field-meta.xml
<CustomField>
    <fullName>FFireAbrechnung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FFire Abrechnung</label>
    <type>Checkbox</type>
</CustomField>