force-app/main/default/objects/Opportunity/fields/FiBe_CS__c.field-meta.xml
<CustomField>
    <fullName>FiBe_CS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FB CS liegt vor</label>
    <type>Checkbox</type>
</CustomField>