force-app/main/default/objects/Opportunity/fields/Finanzierer__c.field-meta.xml
<CustomField>
    <fullName>Finanzierer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finanzierer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Finanzierer)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>