force-app/main/default/objects/Opportunity/fields/Finanzierung__c.field-meta.xml
<CustomField>
    <fullName>Finanzierung__c</fullName>
    <label>Finanzierung</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HypoCare</fullName>
            </value>
            <value>
                <fullName>CS fremd</fullName>
                <label>Carestone</label>
            </value>
            <value>
                <fullName>Fremdfinanzierung</fullName>
            </value>
            <value>
                <fullName>Eigenkapitalzahlung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>