force-app/main/default/objects/Opportunity/fields/Finanzierung_oder_Eigenkapitalnachweis__c.field-meta.xml
<CustomField>
    <fullName>Finanzierung_oder_Eigenkapitalnachweis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FB Bank liegt vor</label>
    <type>Checkbox</type>
</CustomField>