force-app/main/default/objects/Opportunity/fields/Finanzierungsberater__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsberater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finanzierungsberater</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Carestone Service GmbH</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verkaufschancen (Finanzierungsberater)</relationshipLabel>
    <relationshipName>VerkaufschancenFinanzierungsberater</relationshipName>
    <type>Lookup</type>
</CustomField>