force-app/main/default/objects/Opportunity/fields/FinanzierungsberaterUser__c.field-meta.xml
<CustomField>
    <fullName>FinanzierungsberaterUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finanzierungsberater User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OpportunitiesFinanzierungsberater</relationshipName>
    <type>Lookup</type>
</CustomField>