force-app/main/default/objects/Opportunity/fields/FinanzierungsbestaetigungSenden__c.field-meta.xml
<CustomField>
    <fullName>FinanzierungsbestaetigungSenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finanzierungsbestätigung senden</label>
    <type>Checkbox</type>
</CustomField>