force-app/main/default/objects/Opportunity/fields/Finanzierungsnachweis__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsnachweis__c</fullName>
    <formula>if(TEXT(Finanzierung__c) == &apos;Eigenkapitalzahlung&apos;, &apos;Eigenkapitalnachweis&apos;, &apos;Vertrauliche Selbstauskunft&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finanzierungsnachweis</label>
    <type>Text</type>
</CustomField>