force-app/main/default/objects/Opportunity/fields/FinanzierungsvertragUnterzeichnet__c.field-meta.xml
<CustomField>
    <fullName>FinanzierungsvertragUnterzeichnet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Darlehensvertrag liegt vor</label>
    <type>Checkbox</type>
</CustomField>