force-app/main/default/objects/Opportunity/fields/FirstBuyerInformation__c.field-meta.xml
<CustomField>
    <fullName>FirstBuyerInformation__c</fullName>
    <label>Erster Käufer Infos</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>