force-app/main/default/objects/Opportunity/fields/ForecastCurrentYear__c.field-meta.xml
<CustomField>
    <fullName>ForecastCurrentYear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prognose aktuelles Jahr</label>
    <type>Checkbox</type>
</CustomField>