force-app/main/default/objects/Opportunity/fields/FourteenDayDeadlineRunsSince__c.field-meta.xml
<CustomField>
    <fullName>FourteenDayDeadlineRunsSince__c</fullName>
    <label>14 Tagesfrist läuft seit</label>
    <type>Date</type>
</CustomField>