force-app/main/default/objects/Opportunity/fields/GenehmigtVonFinanzierungsberater__c.field-meta.xml
<CustomField>
    <fullName>GenehmigtVonFinanzierungsberater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genehmigt von Finanzierungsberater</label>
    <type>Checkbox</type>
</CustomField>