force-app/main/default/objects/Opportunity/fields/Gesamtkosten__c.field-meta.xml
<CustomField>
    <fullName>Gesamtkosten__c</fullName>
    <formula>beurkundeter_Kaufpreis__c + beurkundeter_Kaufpreis__c* Immobilie__r.Real_Estate_Transfer_Tax__c + beurkundeter_Kaufpreis__c* Immobilie__r.Notary_And_Court_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gesamtkosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>