force-app/main/default/objects/Opportunity/fields/Grund_Verl_ngerung__c.field-meta.xml
<CustomField>
    <fullName>Grund_Verl_ngerung__c</fullName>
    <label>Grund Verlängerung</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>